2005-09-19  Carl Worth  <cworth@cworth.org>

	Originally: 2005-09-19  Hans Breuer  <hans@breuer.org>

        * src/cairoint.h : win32 specific definitions for
	CAIRO_MUTEX_DECLARE, CAIRO_MUTEX_LOCK etc. [not based on win32
	mutex but critical sections]
	
        * src/cairo-win32-surface.c : add DllMain() to do global,
	single-threaded 'mutex' (de)initialization. No ifdefs needed, some
	variables would simply not be used when the respective backend
	would not be compiled in.

2005-09-19  Carl Worth  <cworth@cworth.org>

	* src/Makefile.am (libcairo_la_SOURCES): Add cairo-cache-private.h
	which was missing from the list, (thanks to sunmoon1997).

2005-09-19  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Note that 4414 is now fixed.

2005-09-18  Billy Biggs  <vektor@dumbterm.net>

	* configure.in: Fix the MMX test to only check for MMX intrinsics
	and not the SSE intrinsics.

2005-09-18  Billy Biggs  <vektor@dumbterm.net>

	Bug #4414, reviewed by otaylor, cworth.

	* configure.in: Remove -msse from the MMX CFLAGS as it causes
	gcc to emit SSE instructions, however the detection code only
	checks for processors supporting MMX and does not require SSE.

2005-09-16  Carl Worth  <cworth@cworth.org>

	* src/cairo-path-stroke.c: (_cairo_stroker_start_dash),
	(_cairo_stroker_init): Prefer cairo_bool_t, TRUE, and FALSE over
	int, 1, and 0.

2005-09-16  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Mark 4408 as resolved.

2005-09-16  Carl Worth  <cworth@cworth.org>

	Tested by: John Ellson
	Closes bug #4408
	https://bugs.freedesktop.org/show_bug.cgi?id=4408

	* src/cairo-path-stroke.c: (_cairo_stroker_curve_to_dashed),
	(_cairo_path_fixed_stroke_to_traps): Add support for dashed
	splines. (The antialiasing quality isn't perfect, but at least the
	curves are dashed now).

2005-09-16  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Mark 4260 as resolved. Add 4414 to the 1.0.2 roadmap.

2005-09-14  David Reveman  <davidr@novell.com>
